# wiki_assets

./: .gitignore  README.md
Configuration/: Cargo.toml  Cross.toml  crossrc.bash_aliases
FAQ/dbus/: README.md
FAQ/dbus/src/: main.rs
Recipes/openssl-certs/: Cargo.toml  Cross.toml  README.md
Recipes/openssl-certs/src/: main.rs
Recipes/redoxer/: Cargo.toml  Cross.toml  README.md  aarch64.Dockerfile  amd64.Dockerfile  armhf.Dockerfile  i686.Dockerfile  redoxer.sh
Recipes/sccache/: Cargo.toml  Cross.toml  Dockerfile.x86_64-unknown-linux-musl-sccache  README.md  build.sh
Recipes/sqlx-proc-macro/: Cargo.toml  Cross.toml  README.md
Recipes/sqlx-proc-macro/src/: main.rs
Recipes/vcpkg/: Cargo.toml  Cross.toml  README.md  aarch64.Dockerfile  amd64.Dockerfile  armhf.Dockerfile  build-essential.sh  cmake  conan.sh  find  i686.Dockerfile  meson.sh  mips64el.Dockerfile  vcpkg-triple.sh  vcpkg.sh
Recipes/vcpkg/ext/cpp-atoi/: meson.build
Recipes/vcpkg/ext/cpp-helloworld/: meson.build
Recipes/vcpkg/ext/zlib/: README.md
Recipes/vcpkg/src/: main.rs
